Remove links to hgeometry.

--- a/index.pug
+++ b/index.pug
@@ -11,50 +11,9 @@ mixin video(file)
 block content
   article
     p
-      b rGeometry
+      b RGeometry
       |
-      | is a library for computing with geometric objects in Rust. It defines basic geometric types
-      | and primitives, and implements many algorithms, including:
-    #algo-list
-      div \( O(n \log n) \)
-      div
-        a(href='#convex-hull') Convex Hull.
-      div \( O(k) \)
-      div
-        a(href='#fast-visibility') Visibility polygon.
-      div \( O(n) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Smallest-circle_problem') Smallest enclosing disk.
-      div  \( O(n \log n) \) 
-      div
-        a(href='https://en.wikipedia.org/wiki/Ramer%E2%80%93Douglas%E2%80%93Peucker_algorithm')
-          | Douglas Peucker&apos;s simplification algorithm.
-      div \( O(\log n) \) 
-      div
-        a(href='https://en.wikipedia.org/wiki/Extreme_point') Convex extremes and tangents.
-      div \( O(n \log n) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Delaunay_triangulation') Delaunay triangulation.
-      div \( O(n \log n) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Euclidean_minimum_spanning_tree')
-          | Euclidean Minimum Spanning Tree.
-      div \( O(1/\varepsilon^dn\log n) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Well-separated_pair_decomposition')
-          | Well-Separated pair decomposition.
-      div \( O(n+m) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Minkowski_addition') Minkowski sum.
-      div \( O(n\log n) \)
-      div
-        a(href='#closest-pair') Closest pair of points.
-      div \( O(nm) \)
-      div
-        a(href='https://en.wikipedia.org/wiki/Fr%C3%A9chet_distance') Fr&eacute;chet distance.
-      div \( O(n) \)
-      div
-        a(href='#shortest-path') Single-source shortest path tree.
+      | is a ...
     p
       | Geometry is inherently visual and the rest of this website is
       | devoted to illustrations and animations that highlight how the various algorithms work.
