--- a/layout.pug
+++ b/layout.pug
@@ -1,12 +1,12 @@
 doctype html
 head
   meta(name='viewport' content='width=device-width, initial-scale=1')
-  title HGeometry
+  title RGeometry
   link(href='./style.less' rel='stylesheet')
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css' integrity='sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X' crossorigin='anonymous')
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js' integrity='sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4' crossorigin='anonymous')
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js' integrity='sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa' crossorigin='anonymous' onload='renderMathInElement(document.body);')
-a.github-corner(href='https://github.com/noinia/hgeometry' aria-label='View source on GitHub')
+a.github-corner(href='https://github.com/rgeometry/rgeometry' aria-label='View source on GitHub')
   svg(width='80' height='80' viewbox='0 0 250 250' style='fill:#64CEAA; color:#fff; position: fixed; top: 0; border: 0; right: 0;' aria-hidden='true')
     path(d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z')
     path.octo-arm(d='M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2' fill='currentColor' style='transform-origin: 130px 106px;')
@@ -19,7 +19,7 @@ main
     .btn
       a(href='https://github.com/rgeometry/rgeometry') GitHub
       a(href='https://discord.gg/HQwbD9jWqg') Discord
-      a(href='https://hackage.haskell.org/package/hgeometry') API Reference
+      a() API Reference
       a() Landscape
       a() Correctness
   block content
@@ -29,8 +29,7 @@ footer
   |
   a(href='https://creativecommons.org/licenses/by-sa/3.0/')
     | Creative Commons Attribution-Share-Alike License 3.0
-  | . HGeometry is licensed under BSD3. Copyright by Frank Staals,
-  |     David Himmelstrup, and several contributors. See GitHub for details.
+  | . RGeometry is licensed under Unlicense. See GitHub for details.
 script(src='./instantclick.min.js' data-no-instant='')
 script(data-no-instant='').
   InstantClick.init();
