--- a/layout.pug
+++ b/layout.pug
@@ -20,6 +20,7 @@ main
       a(href='https://github.com/rgeometry/rgeometry') GitHub
       a(href='https://discord.gg/HQwbD9jWqg') Discord
       a() API Reference
+      a(href='https://rgeometry.org/rgeometry-playground/') Playground
       a() Landscape
       a() Correctness
   block content
