--- a/style.less
+++ b/style.less
@@ -26,6 +26,13 @@ body {
   background : @grey;
 }
 
+iframe {
+  border    : 0px;
+  width     : 100%;
+  height    : 100%;
+  min-height: 15em;
+}
+
 h1 {
   font-size: 350%;
   margin   : 0;
