Update backend DNS.

--- a/index.pug
+++ b/index.pug
@@ -5,11 +5,11 @@ mixin video(file)
   // go for GitHub LFS object. LFS bandwidth is limited to 1GiB/month.
   video(mute='' loop='' controls='')
     //source(src='./assets/'+file type='video/mp4')
-    //source(src='https://f002.backblazeb2.com/file/hgeometry/'+file type='video/mp4')
-    //source(src='https://github.com/hgeometry/hgeometry.github.io/raw/main/assets/'+file type='video/mp4')
+    //source(src='https://f002.backblazeb2.com/file/rgeometry/'+file type='video/mp4')
+    //source(src='https://github.com/rgeometry/rgeometry.github.io/raw/main/assets/'+file type='video/mp4')
 
 mixin playground(hash)
-  iframe(src='https://reanimate.clozecards.com:20443/loader.html?hash=' +hash)
+  iframe(src='https://web.rgeometry.org:20443/loader.html?hash=' +hash)
 
 block content
   article
