--- a/style.less
+++ b/style.less
@@ -27,7 +27,7 @@ body {
 }
 
 iframe {
-  border    : 0px;
+  border    : 1px dashed black;
   width     : 100%;
   height    : 100%;
   min-height: 15em;
