--- a/style.less
+++ b/style.less
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'VarelaRound';
+  src: url('VarelaRound-Regular.ttf') format('truetype');
+}
+
 // Colours
 @black : #333538;
 @white : #FFFFFF;
@@ -22,7 +27,7 @@
 body {
   margin     : 0;
   font-size  : 18px;
-  font-family: 'Lato', sans-serif;
+  font-family: 'VarelaRound', 'Noto Sans JP', 'Lato', sans-serif;
   background : @grey;
 }
 
@@ -31,6 +36,10 @@ iframe {
   width     : 100%;
   height    : 100%;
   min-height: 15em;
+}
+
+.katex {
+  font-size: smaller !important;
 }
 
 h1 {
@@ -112,6 +121,23 @@ header {
 
 main {
   margin-bottom: 4em;
+  display              : grid;
+  grid-template-columns: 50% 50%;
+  // grid-column-gap: 20px;
+
+  margin          : 0 auto;
+  max-width: 1000px;
+  article:first-of-type {
+    // max-width: 1000px;
+    grid-column: span 2;
+    max-width: 100%;
+  }
+  article {
+    @media @tablet-query {
+      grid-column : span 2;
+      max-width: 100%;
+    }
+  }
 }
 
 article {
@@ -120,17 +146,20 @@ article {
   }
 
   position        : relative;
-  max-width       : 800px;
+  max-width       : 500px;
   margin          : 0 auto;
   box-shadow      : 0 1px 2px rgba(0, 0, 0, 0.2);
-  padding         : 30px 30px;
+  padding         : 20px 20px;
+  // padding: 0px;
   background-color: @white;
   margin-bottom   : @article_gap;
 
-  @media @mobile-query {
+  @media @tablet-query {
     max-width    : 100%;
     padding-left : 0px;
     padding-right: 0px;
+    margin          : 0;
+    margin-bottom   : @article_gap;
 
     p {
       padding-left : 20px;
@@ -141,6 +170,14 @@ article {
   &:first-of-type {
     top          : -@overlap;
     margin-bottom: @article_gap - @overlap;
+
+    p {
+      margin-top: 0;
+    }
+
+    dd {
+      padding-bottom: 1em;
+    }
 
     a {
       text-decoration: none;
@@ -154,45 +191,53 @@ article {
     }
   }
 
+  @media not @tablet-query {
   &.feature {
-    display              : grid;
-    grid-template-columns: 45% 55%;
-
-    h2 {
-      grid-column: span 2;
+    &:nth-child(even) {
+      margin-right: 0.5em;
     }
-
-    div:nth-child(even) {
-      margin-right: 1em;
+    &:nth-child(odd) {
+      margin-left: 0.5em;
     }
+    // display              : grid;
+    // grid-template-columns: 45% 55%;
 
-    @media not @mobile-query {
-      &:nth-child(even) {
-        grid-template-columns: 55% 45%;
+    // h2 {
+    //   grid-column: span 2;
+    // }
 
-        div:nth-of-type(1) {
-          grid-row    : 2;
-          grid-column : 2;
-          margin-left : 1em;
-          margin-right: 0;
-        }
+    // div:nth-child(even) {
+    //   margin-right: 1em;
+    // }
 
-        div:nth-of-type(2) {
-          grid-row    : 2;
-          grid-column : 1;
-          margin-left : 1em;
-          margin-right: 0;
-        }
-      }
-    }
+    // @media not @mobile-query {
+    //   &:nth-child(even) {
+    //     grid-template-columns: 55% 45%;
 
-    @media @mobile-query {
-      div {
-        grid-column : span 2;
-        margin-right: 0;
-      }
-    }
+    //     div:nth-of-type(1) {
+    //       grid-row    : 2;
+    //       grid-column : 2;
+    //       margin-left : 1em;
+    //       margin-right: 0;
+    //     }
+
+    //     div:nth-of-type(2) {
+    //       grid-row    : 2;
+    //       grid-column : 1;
+    //       margin-left : 1em;
+    //       margin-right: 0;
+    //     }
+    //   }
+    // }
+
+    // @media @mobile-query {
+    //   div {
+    //     grid-column : span 2;
+    //     margin-right: 0;
+    //   }
+    // }
   }
+}
 }
 
 video {
@@ -306,7 +351,9 @@ details summary::-webkit-details-marker {
   }
 }
 
-
+.github-corner svg {
+  z-index: 1;
+}
 .github-corner:hover .octo-arm {
   animation: octocat-wave 560ms ease-in-out
 }
