--- a/style.less
+++ b/style.less
@@ -131,6 +131,7 @@ main {
     // max-width: 1000px;
     grid-column: span 2;
     max-width: 100%;
+    width: 100%;
   }
   article {
     @media @tablet-query {
