--- a/index.pug
+++ b/index.pug
@@ -46,11 +46,16 @@ block content
       dl
         dt Does RGeometry support 3D objects?
         dd Yes, but most of the algorithms are 2D only.
+
         dt Can I compile RGeometry to JavaScript?
         dd Yes, that is how the playground and all the interactive examples work.
+
+        dt Any relation to <a href="https://hgeometry.org">HGeometry?</a>
+        dd Yes, there is overlap in both developers and key concepts.
+
     p
-      | Geometry is inherently visual and the quickest way to grok this library is to
-      | see it in action. Below are interactive examples of most of the algorithms.
+      | Geometry is inherently visual and the quickest way to intuitively understand this
+      | library is to see it in action. Below are interactive examples of most of the algorithms.
   article#two-opt.feature
     +feature(
       {title: "Random Polygons"
