--- a/style.less
+++ b/style.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'VarelaRound';
-  src: url('VarelaRound-Regular.ttf') format('truetype');
+  src        : url('VarelaRound-Regular.ttf') format('truetype');
 }
 
 // Colours
@@ -120,23 +120,25 @@ header {
 }
 
 main {
-  margin-bottom: 4em;
+  margin-bottom        : 4em;
   display              : grid;
   grid-template-columns: 50% 50%;
   // grid-column-gap: 20px;
 
-  margin          : 0 auto;
+  margin   : 0 auto;
   max-width: 1000px;
+
   article:first-of-type {
     // max-width: 1000px;
     grid-column: span 2;
-    max-width: 100%;
-    width: 100%;
+    max-width  : 100%;
+    width      : 100%;
   }
+
   article {
     @media @tablet-query {
-      grid-column : span 2;
-      max-width: 100%;
+      grid-column: span 2;
+      max-width  : 100%;
     }
   }
 }
@@ -159,13 +161,19 @@ article {
     max-width    : 100%;
     padding-left : 0px;
     padding-right: 0px;
-    margin          : 0;
-    margin-bottom   : @article_gap;
+    margin       : 0;
+    margin-bottom: @article_gap;
 
+    dl,
     p {
       padding-left : 20px;
       padding-right: 20px;
     }
+
+  }
+
+  dt {
+    font-weight: bold;
   }
 
   &:first-of-type {
@@ -193,52 +201,54 @@ article {
   }
 
   @media not @tablet-query {
-  &.feature {
-    &:nth-child(even) {
-      margin-right: 0.5em;
+    &.feature {
+      &:nth-child(even) {
+        margin-right: 0.5em;
+      }
+
+      &:nth-child(odd) {
+        margin-left: 0.5em;
+      }
+
+      // display              : grid;
+      // grid-template-columns: 45% 55%;
+
+      // h2 {
+      //   grid-column: span 2;
+      // }
+
+      // div:nth-child(even) {
+      //   margin-right: 1em;
+      // }
+
+      // @media not @mobile-query {
+      //   &:nth-child(even) {
+      //     grid-template-columns: 55% 45%;
+
+      //     div:nth-of-type(1) {
+      //       grid-row    : 2;
+      //       grid-column : 2;
+      //       margin-left : 1em;
+      //       margin-right: 0;
+      //     }
+
+      //     div:nth-of-type(2) {
+      //       grid-row    : 2;
+      //       grid-column : 1;
+      //       margin-left : 1em;
+      //       margin-right: 0;
+      //     }
+      //   }
+      // }
+
+      // @media @mobile-query {
+      //   div {
+      //     grid-column : span 2;
+      //     margin-right: 0;
+      //   }
+      // }
     }
-    &:nth-child(odd) {
-      margin-left: 0.5em;
-    }
-    // display              : grid;
-    // grid-template-columns: 45% 55%;
-
-    // h2 {
-    //   grid-column: span 2;
-    // }
-
-    // div:nth-child(even) {
-    //   margin-right: 1em;
-    // }
-
-    // @media not @mobile-query {
-    //   &:nth-child(even) {
-    //     grid-template-columns: 55% 45%;
-
-    //     div:nth-of-type(1) {
-    //       grid-row    : 2;
-    //       grid-column : 2;
-    //       margin-left : 1em;
-    //       margin-right: 0;
-    //     }
-
-    //     div:nth-of-type(2) {
-    //       grid-row    : 2;
-    //       grid-column : 1;
-    //       margin-left : 1em;
-    //       margin-right: 0;
-    //     }
-    //   }
-    // }
-
-    // @media @mobile-query {
-    //   div {
-    //     grid-column : span 2;
-    //     margin-right: 0;
-    //   }
-    // }
   }
-}
 }
 
 video {
@@ -355,6 +365,7 @@ details summary::-webkit-details-marker {
 .github-corner svg {
   z-index: 1;
 }
+
 .github-corner:hover .octo-arm {
   animation: octocat-wave 560ms ease-in-out
 }
