--- a/style.less
+++ b/style.less
@@ -122,8 +122,8 @@ header {
 main {
   margin-bottom        : 4em;
   display              : grid;
-  grid-template-columns: 50% 50%;
-  // grid-column-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap      : 20px;
 
   margin   : 0 auto;
   max-width: 1000px;
@@ -148,7 +148,13 @@ article {
     text-align: center;
   }
 
+  h3 {
+    margin    : 0;
+    text-align: center;
+  }
+
   position        : relative;
+  width           : 100%;
   max-width       : 500px;
   margin          : 0 auto;
   box-shadow      : 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -188,26 +194,26 @@ article {
       padding-bottom: 1em;
     }
 
-    a {
-      text-decoration: none;
-      color          : black;
+    // a {
+    //   text-decoration: none;
+    //   color          : black;
 
-      &:visited {}
+    //   &:visited {}
 
-      &:hover {
-        text-decoration: underline;
-      }
-    }
+    //   &:hover {
+    //     text-decoration: underline;
+    //   }
+    // }
   }
 
   @media not @tablet-query {
     &.feature {
       &:nth-child(even) {
-        margin-right: 0.5em;
+        // margin-right: 0.5em;
       }
 
       &:nth-child(odd) {
-        margin-left: 0.5em;
+        // margin-left: 0.5em;
       }
 
       // display              : grid;
