--- a/style.less
+++ b/style.less
@@ -149,7 +149,7 @@ article {
   }
 
   h3 {
-    margin    : 0;
+    margin-top: 0;
     text-align: center;
   }
 
@@ -314,6 +314,15 @@ details summary::-webkit-details-marker {
 
 
 .feature-compare {
+  .checked {
+    color         : green;
+    // font-weight: bolder;
+  }
+
+  .unchecked {
+    color: grey;
+  }
+
   @table_radius: 15px;
 
   details:nth-child(odd) {
@@ -331,25 +340,25 @@ details summary::-webkit-details-marker {
     padding-bottom: 0.5em;
   }
 
-  summary>div,
-  &>div {
+  summary>div {
     display                 : grid;
     // grid-template-columns: 10em 3fr 1fr;
-    grid-template-columns   : auto auto 2em;
+    grid-template-columns   : auto 1fr auto;
 
     div:nth-child(1) {
       // text-align   : right;
       padding-right: 0.5em;
     }
 
-    div:nth-child(2) {
+    div:nth-child(3) {
       text-align      : right;
+      text-decoration : underline;
       // padding-right: 0.5em;
     }
 
     div:nth-child(3),
     div:nth-child(4) {
-      text-align: center;
+      // text-align: center;
     }
   }
 
@@ -357,7 +366,7 @@ details summary::-webkit-details-marker {
 
     div:nth-child(3),
     div:nth-child(4) {
-      font-size: 150%;
+      // font-size: 150%;
     }
   }
 
