Update server url.

--- a/index.pug
+++ b/index.pug
@@ -31,7 +31,7 @@ mixin feature(args)
     block
 
 mixin playground(gist)
-  iframe(src='https://web.rgeometry.org:20443/loader.html?gist=' +gist)
+  iframe(src='https://web.rgeometry.org/wasm/gist/' + gist)
 
 block content
   article
