Drop Noto font and defer katex.css.

--- a/style.less
+++ b/style.less
@@ -27,7 +27,7 @@
 body {
   margin     : 0;
   font-size  : 18px;
-  font-family: 'VarelaRound', 'Noto Sans JP', 'Lato', sans-serif;
+  font-family: 'VarelaRound', 'Lato', sans-serif;
   background : @grey;
 }
 
