--- a/layout.pug
+++ b/layout.pug
@@ -2,6 +2,7 @@ doctype html
 head
   meta(name='viewport' content='width=device-width, initial-scale=1')
   title RGeometry
+  link(ref='preload' href='VarelaRound-Regular.ttf' as="font" type="font/ttf")
   link(href='./style.less' rel='stylesheet')
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css' media="print" onload="this.media='all'" integrity='sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X' crossorigin='anonymous')
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js' integrity='sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4' crossorigin='anonymous')
