--- a/layout.pug
+++ b/layout.pug
@@ -4,7 +4,7 @@ head
   title RGeometry
   link(ref='preload' href='VarelaRound-Regular.ttf' as="font" type="font/ttf")
   link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Main-Regular.woff2' as="font" type="font/woff2" crossorigin="anonymous")
-  link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
+  link(rel='preload' href='https://cdn.jsdelivr.net/npm/katex/dist/fonts/KaTeX_Math-Italic.woff2' as="font" type="font/woff2" crossorigin="anonymous")
   link(href='./style.less' rel='stylesheet')
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css' media="print" onload="this.media='all'" integrity='sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X' crossorigin='anonymous')
   script(defer='' src='https://cdn.jsdelivr.net/npm/katex/dist/katex.min.js' integrity='sha384-g7c+Jr9ZivxKLnZTDUhnkOnsh30B4H0rpLUpJ4jAIKs4fnJI+sEnkvrMWph2EDg4' crossorigin='anonymous')
