--- a/style.less
+++ b/style.less
@@ -1,6 +1,7 @@
 @font-face {
-  font-family: 'VarelaRound';
-  src        : url('VarelaRound-Regular.ttf') format('truetype');
+  font-family : 'VarelaRound';
+  font-display: optional;
+  src         : url('VarelaRound-Regular.ttf') format('truetype');
 }
 
 // Colours
